tests/snapshots/wire_snapshots__snapshot_response_query_result_dml.snap
---
source: tests/wire_snapshots.rs
expression: "Response::QueryResult(q)"
---
{
  "type": "query_result",
  "id": "test",
  "success": true,
  "has_results": false,
  "update_count": 3,
  "cont_id": null,
  "is_done": true,
  "metadata": {
    "column_count": 0,
    "columns": [],
    "job": null
  },
  "data": [],
  "execution_time": 0.5
}
