tests/snapshots/wire_snapshots__snapshot_response_query_result_select.snap
---
source: tests/wire_snapshots.rs
expression: "Response::QueryResult(q)"
---
{
  "type": "query_result",
  "id": "test",
  "success": true,
  "has_results": true,
  "update_count": -1,
  "cont_id": "cur-1",
  "is_done": false,
  "metadata": {
    "column_count": 1,
    "columns": [
      {
        "name": "ID",
        "label": null,
        "type": "INTEGER",
        "display_size": 11,
        "precision": 10,
        "scale": 0
      }
    ],
    "job": null
  },
  "data": [
    {
      "ID": 42
    }
  ],
  "execution_time": 1.23
}
