tests/snapshots/wire_snapshots__snapshot_response_sql_closed.snap
---
source: tests/wire_snapshots.rs
assertion_line: 242
expression: r
---
{
  "type": "sql_closed",
  "id": "test",
  "success": true
}
