tests/snapshots/wire_snapshots__snapshot_response_trace_data.snap
---
source: tests/wire_snapshots.rs
assertion_line: 281
expression: r
---
{
  "type": "trace_data",
  "id": "test",
  "success": true,
  "tracedata": "+++ trace start +++\nrow 1\nrow 2"
}
