tests/snapshots/wire_snapshots__snapshot_response_version.snap
---
source: tests/wire_snapshots.rs
assertion_line: 252
expression: r
---
{
  "type": "version",
  "id": "test",
  "success": true,
  "version": "2.3.5"
}
